--- a/styles.css
+++ b/styles.css
@@ -774,3 +774,56 @@ logo{
   #audiocommand_volume[type=range]::-ms-fill-upper {
     width: 80px;
   }
+
+  body {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    background-color: #000;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.rankings {
+    background-color: orangered;
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid #fff;
+}
+
+th, td {
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #333;
+}
+
+td {
+    background-color: #555;
+}
+
+th, td {
+    color: #fff;
+}
+
+th a, th a:visited, th a:hover, th a:active {
+    color: #fff;
+    text-decoration: none;
+}
